--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/rares77/witai-facebook-connector#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+	"ejs": "2.4.2",
   }
 }
