--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Witai-Facebook-Connector",
-  "description": "Connects a Facebook App to Wit.ai in order to create a Chatbot",
+  "description": "Connects a Facebook App to Wit ai in order to create a Chatbot",
   "repository": "https://github.com/rares77/witai-facebook-connector.git",
   "logo": "",
   "keywords": [
