--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "wit",
     "wit.ai",
     "chatbot",
-	"bot",
+    "bot",
     "botengine",
     "bots",
     "nlp",
@@ -31,7 +31,9 @@
   },
   "homepage": "https://github.com/rares77/witai-facebook-connector#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "ejs": "2.4.2",
     "express": "^4.14.0",
-	"ejs": "2.4.2"
+    "request": "^2.74.0"
   }
 }
